remove authorization params from api docs
